docs/pages/versions/v57.0.0/sdk/sharing.mdx
---
title: Sharing
description: A library that provides functionality for sharing and receiving data from other apps.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-sharing'
packageName: 'expo-sharing'
iconUrl: '/static/images/packages/expo-sharing.png'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

`expo-sharing` allows you to share files directly with other compatible applications and to receive compatible data shared from other apps.

<ContentSpotlight file="sdk/sharing.mp4" loop={false} />

#### Sharing limitations on web

- `expo-sharing` for web is built on top of the Web Share API, which still has [very limited browser support](https://caniuse.com/#feat=web-share). Be sure to check that the API can be used before calling it by using `Sharing.isAvailableAsync()`.
- **HTTPS required on web**: The Web Share API is only available on web when the page is served over https. Run your app with `npx expo start --tunnel` to enable it.
- **No local file sharing on web**: Sharing local files by URI works on Android and iOS, but not on web. You cannot share local files on web by URI — you will need to upload them somewhere and share that URI.

## Installation

<APIInstallSection />

## Configuration in app config

You can configure `expo-sharing` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect. If your app does **not** use CNG, then you'll need to manually configure the library.

<ConfigPluginExample>

The following example shows a configuration that allows sharing a single or multiple images on Android and iOS:

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-sharing",
        {
          "ios": {
            "enabled": true,
            "activationRule": {
              "supportsImageWithMaxCount": 5
            }
          },
          "android": {
            "enabled": true,
            "singleShareMimeTypes": ["image/*"],
            "multipleShareMimeTypes": ["image/*"]
          }
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'ios.enabled',
      description:
        'A boolean value to enable the iOS Share Extension. If `true`, a share extension target is added to the project.',
      default: 'false',
    },
    {
      name: 'ios.extensionBundleIdentifier',
      description: 'The bundle identifier for the iOS Share Extension.',
      default: '{appBundleIdentifier}.expo-sharing-extension',
    },
    {
      name: 'ios.appGroupId',
      description: 'The App Group ID to use for sharing data between the app and the extension.',
      default: 'group.{appBundleIdentifier}',
    },
    {
      name: 'ios.activationRule',
      description:
        'Configuration for the `NSExtensionActivationRule` in **Info.plist**. Can be either an object confirming to the [`ActivationRuleOptions`](#activationruleoptions) type to generate a standard predicate or a raw string to specify a custom predicate directly (for example, `SUBQUERY(...)`).',
      default: '{ supportsText: true, supportsWebUrlWithMaxCount: 1 }',
    },
    {
      name: 'android.enabled',
      description:
        'A boolean value to enable Android share intent handling. If `true`, adds the necessary `intent-filter` to the **AndroidManifest.xml**.',
      default: 'false',
    },
    {
      name: 'android.singleShareMimeTypes',
      description:
        'An array of MIME types to accept for single file sharing (using `ACTION_SEND` intent).',
      default: '[]',
    },
    {
      name: 'android.multipleShareMimeTypes',
      description:
        'An array of MIME types to accept for multiple file sharing (using `ACTION_SEND_MULTIPLE` intent).',
      default: '[]',
    },
  ]}
/>

> **info** On iOS, the system shows your app in the share sheet only when the source app offers an item that matches the activation rule. The rule matches the [uniform type identifier](https://developer.apple.com/documentation/uniformtypeidentifiers) of the shared item, not the subject of the content. Many apps share a link to a video or a photo instead of the file itself. For example, `supportsMovieWithMaxCount` matches a video file, but it does not match a link to a video. To receive those shares, also set `supportsWebUrlWithMaxCount` and `supportsText`.

## Sharing to your app from other apps

> **important** **Note**: This functionality is currently [experimental](/more/release-statuses/#experimental). On iOS the share extension opens the main target, instead of processing the share in a sharing `ViewController`, which is not officially supported by Apple and may stop working in a future iOS release.

When an app user shares content with your app, the operating system launches your app (also known as the process of bringing it to the foreground). To process this action, you need to configure your navigation to handle the incoming deep link.

### Expo Router

If you are using [Expo Router](/router/introduction/), you can use the [**+native-intent.ts**](/router/advanced/native-intent/) file to handle the incoming share intent. This allows you to inspect the incoming path and redirect to a specific route.

```tsx app/+native-intent.ts
import { getSharedPayloads } from 'expo-sharing';

export async function redirectSystemPath({ path, initial }: { path: string; initial: boolean }) {
  try {
    // Check if the URL is from the share extension/intent
    if (new URL(path).hostname === 'expo-sharing') {
      return '/handle-share';
    }
    return path;
  } catch {
    // Fallback to the root path on error
    return '/';
  }
}
```

### React Navigation

If you are using [React Navigation](https://reactnavigation.org/), you can use the `linking` prop to intercept the deep link. You should check if the incoming URL hostname matches the `expo-sharing` scheme and redirect the user to a specific handler screen.

```tsx
import * as Linking from 'expo-linking';
import { createStaticNavigation } from '@react-navigation/native';
import { createNativeStackNavigator } from '@react-navigation/native-stack';
import HandleShare from './HandleShare';

const RootStack = createNativeStackNavigator({
  screens: {
    // Other screens
    HandleShare: {
      screen: HandleShare,
      linking: {
        path: '/handle-share',
      },
    },
  },
});

const Navigation = createStaticNavigation(RootStack);

function processUrl(url: string | null) {
  if (!url) return null;

  // The path to your share handler screen
  const handlerUrl = Linking.createURL('/handle-share');

  // Check if the URL is from the share extension/intent
  if (new URL(url).hostname === 'expo-sharing') {
    return handlerUrl;
  }
  return url;
}

export default function App() {
  return (
    <Navigation
      // The rest of your navigation config
      linking={{
        prefixes: [Linking.createURL('/')],
        async getInitialURL() {
          const initialUrl = await Linking.getInitialURL();
          return processUrl(initialUrl);
        },
        subscribe(listener) {
          const linkingSubscription = Linking.addEventListener('url', ({ url }) => {
            const processedUrl = processUrl(url) ?? url;
            listener(processedUrl);
          });

          return () => {
            linkingSubscription.remove();
          };
        },
      }}
    />
  );
}
```

### No navigation library

If you are creating a basic app without a navigation library, your main screen is the handler screen. You can move on to the next section.

## Displaying shared content

Once you have redirected the user to a handler screen, you can use the `useIncomingShare` hook to access and display the shared data.

The following example shows a screen that displays shared images:

```tsx
import { Image } from 'expo-image';
import { useIncomingShare } from 'expo-sharing';
import { View, StyleSheet, ActivityIndicator } from 'react-native';

export default function ShareReceived() {
  const { resolvedSharedPayloads, isResolving } = useIncomingShare();

  if (isResolving) {
    return (
      <View style={styles.container}>
        <ActivityIndicator size="large" />
      </View>
    );
  }

  return (
    <View style={styles.container}>
      {resolvedSharedPayloads.map((payload, index) => {
        if (payload.contentType === 'image') {
          return <Image source={{ uri: payload.contentUri }} style={styles.image} key={index} />;
        }
        return null;
      })}
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
    backgroundColor: 'white',
  },
  image: {
    width: 300,
    height: 300,
    marginBottom: 20,
    borderRadius: 10,
  },
});
```

## API

```js
import * as Sharing from 'expo-sharing';
```

<APISection packageName="expo-sharing" apiName="Sharing" />
